0.5.7
- Invoke-PoshRatHttps does not install root certificate anymore and certificate pinning is used.
0.5.6
- Added Invoke-PowerShellIcmp to the Shells directory.
- Adjusted buffer for Invoke-PowerShellTcp and Invoke-PowerShellUdp and one liners to show larger output.
0.5.5
- Added Invoke-PowerShellWmi to the Shells directory. 
0.5.4
- Added Invoke-PoshRatHttps, Invoke-PosRatHttp and Remove-PoshRat to the Shells directory.
0.5.3
- Added Invoke-PowerShellUdp and Invoke-PowerShellUdpOneLiner to Shells directory.
0.5.2
- Added Invoke-PowerShellTcp and Invoke-PowerShellTcpOneLiner to Shells directory.
0.5.1
- Added Invoke-MimikatzWfigestDowngrade to Gather directory.
0.5.0.1
- Updated Powerpreter by adding Invoke_NetworkRelay and Gcat.
0.5.0
- Added Invoke-NetworkRelay to Pivot directory.
- Added Invoke-PsGcat and Invoke-PsGcatAgent to Shells directory.
0.4.4.2
- Brute-Force.ps1 renamed to Invoke-BruteForce.
- Brute-Force function renamed to Invoke-BruteForce in Powerpreter.
- Major changes to Invoke-BruteForce.
- Major changes to B
0.4.4.1
- Credentials script renamed to Invoke-CredentialsPhish.
- Bug fixes related to exfiltration in the Keylogger script.
- Execute-Command-MSSQL now supports Windows Authentication.
0.4.4
- Added Add-ScrnSaverBackdoor to the Backdoors directory.
- Download-Execute-PS now randomizes filename for the saved script.
- Added Invoke-ADSBackdoor (by Matt).
0.4.3
- Added Out-DnsTxt to Utility directory.
- Modifications to DNS_TXT_Pwnage and Execute-DNSTXT-Code to support multiple domains.
- Added Out-DnsTxt to Powerpreter.
- Updates to Powerpreter fucntions DNS_TXT_Pwnage and Execute-DNSTXT-Code.
0.4.2
- Powerpreter updated to include Client Side Attack functions and other bug fixes.
0.4.1
- Bug fixes to Out-Word and Out-Excel.
0.4.0
- Added scripts for Client Side Attacks
0.3.8.1
- Changes to Encoding and Compression methods acroos multiple scripts
- Bug fix in Get-LSASecrets.ps1
0.3.8